@@ -391,13 +391,12 @@ VideoModeBlock ModeList_VGA_Tseng[]={
 { 0x011  ,M_EGA    ,640 ,480 ,80 ,30 ,8 ,16 ,1 ,0xA0000 ,0xA000 ,100 ,525 ,80 ,480 ,0, 0},
 { 0x012  ,M_EGA    ,640 ,480 ,80 ,30 ,8 ,16 ,1 ,0xA0000 ,0xA000 ,100 ,525 ,80 ,480 ,0, 0},
 { 0x013  ,M_VGA    ,320 ,200 ,40 ,25 ,8 ,8  ,1 ,0xA0000 ,0x2000 ,100 ,449 ,80 ,400 ,_REPEAT1, 0},
-
-{ 0x018  ,M_TEXT   ,1056 ,688, 132,44, 8, 8, 1 ,0xB0000 ,0x4000, 192, 800, 132, 704, 0, 0},
-{ 0x019  ,M_TEXT   ,1056 ,400, 132,25, 8, 16,1 ,0xB0000 ,0x2000, 192, 449, 132, 400, 0, 0},
-{ 0x01A  ,M_TEXT   ,1056 ,400, 132,28, 8, 16,1 ,0xB0000 ,0x2000, 192, 449, 132, 448, 0, 0},
-{ 0x022  ,M_TEXT   ,1056 ,688, 132,44, 8, 8, 1 ,0xB8000 ,0x4000, 192, 800, 132, 704, 0, 0},
-{ 0x023  ,M_TEXT   ,1056 ,400, 132,25, 8, 16,1 ,0xB8000 ,0x2000, 192, 449, 132, 400, 0, 0},
-{ 0x024  ,M_TEXT   ,1056 ,400, 132,28, 8, 16,1 ,0xB8000 ,0x2000, 192, 449, 132, 448, 0, 0},
+{ 0x018  ,M_TEXT   ,1056 ,352, 132,44, 8, 8, 1 ,0xB0000 ,0x4000, 166, 428, 132, 352, 0, 0},
+{ 0x019  ,M_TEXT   ,1056 ,350, 132,25, 8, 14,1 ,0xB0000 ,0x2000, 166, 428, 132, 350, 0, 0},
+{ 0x01A  ,M_TEXT   ,1056 ,364, 132,28, 8, 13,1 ,0xB0000 ,0x2000, 192, 429, 132, 364, 0, 0},
+{ 0x022  ,M_TEXT   ,1056 ,352, 132,44, 8, 8, 1 ,0xB8000 ,0x4000, 166, 428, 132, 352, 0, 0},
+{ 0x023  ,M_TEXT   ,1056 ,350, 132,25, 8, 14,1 ,0xB8000 ,0x2000, 166, 428, 132, 350, 0, 0},
+{ 0x024  ,M_TEXT   ,1056 ,364, 132,28, 8, 13,1 ,0xB8000 ,0x2000, 192, 429, 132, 364, 0, 0},
 { 0x025  ,M_LIN4   ,640 ,480 ,80 ,30 ,8 ,16 ,1 ,0xA0000 ,0xA000 ,100 ,525 ,80 ,480 , 0, 0},
 { 0x029  ,M_LIN4   ,800 ,600 ,100,37 ,8 ,16 ,1 ,0xA0000 ,0xA000, 128 ,663 ,100,600 , 0, 0},
 { 0x02D  ,M_LIN8   ,640 ,350 ,80 ,21 ,8 ,16 ,1 ,0xA0000 ,0x10000,100 ,449 ,80 ,350 , 0, 0},
